--- a/personal/package.json
+++ b/personal/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
+    "bootstrap-icons": "^1.8.2",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3"
-  },
-  "devDependencies": {}
+  }
 }
