--- a/personal/backend/package.json
+++ b/personal/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "irnode_cp": "^1.0.0",
     "nodemon": "^2.0.15"
