--- a/commercial/Backend/package.json
+++ b/commercial/Backend/package.json
@@ -4,14 +4,15 @@
   "description": "commercial backend project",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js --ignore jtelb_data.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "jtelb": "nodemon bot.js --ignore jtelb_data.json"
   },
   "author": "mohammad",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "jtelb": "^1.1.3",
+    "jtelb": "^1.1.5",
     "mongoose": "^6.4.4",
     "nodemon": "^2.0.19"
   }
