--- a/commercial/package.json
+++ b/commercial/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "front": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "backend" : "nodemon backend"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
