--- a/commercial/package.json
+++ b/commercial/package.json
@@ -7,7 +7,8 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "backend" : "nodemon backend"
+    "backend" : "nodemon backend",
+    "jtelb" : "nodemon backend/bot.js --ignore jtelb_data.json"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
