--- a/commercial/backend/package.json
+++ b/commercial/backend/package.json
@@ -10,13 +10,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.1.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "fs": "^0.0.1-security",
+    "loadash": "^1.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.19",
     "prisma": "^4.1.1",
     "route": "^0.2.5"
+  },
+  "devDependencies": {
+    "prisma": "^4.1.1"
   }
 }
