--- a/commercial/backend/package.json
+++ b/commercial/backend/package.json
@@ -18,6 +18,7 @@
     "express-fileupload": "^1.4.0",
     "fs": "^0.0.1-security",
     "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19",
     "prisma": "^4.1.1",
